Error Mitigation/MagiCoder/Data/java_nio_charset_spi/java_nio_charset_spiOutputResult.txt
Sample: CharsetProvider_1
----------------------------------------------------------------
output:
./Data/java_nio_charset_spi/javaFiles/CharsetProvider_1.java:7: error: incompatible types: Charset cannot be converted to CharsetProvider
        CharsetProvider provider = Charset.availableCharsets().values().iterator().next();
                                                                                       ^
1 error


================================================================

Sample: CharsetProvider_2
----------------------------------------------------------------
stdout:
IBM-Thai
IBM01140
IBM01141
IBM01142
IBM01143
IBM01144
IBM01145
IBM01146
IBM01147
IBM01148
IBM01149
IBM037
IBM1026
IBM1047
IBM273
IBM277
IBM278
IBM280
IBM284
IBM285
IBM290
IBM297
IBM420
IBM424
IBM500
IBM860
IBM861
IBM863
IBM864
IBM865
IBM868
IBM869
IBM870
IBM871
IBM918
ISO-2022-CN
ISO-2022-JP
ISO-2022-JP-2
ISO-2022-KR
windows-1255
windows-1256
windows-1258
x-Big5-HKSCS-2001
x-IBM1006
x-IBM1025
x-IBM1046
x-IBM1097
x-IBM1098
x-IBM1112
x-IBM1122
x-IBM1123
x-IBM1124
x-IBM1129
x-IBM1166
x-IBM1364
x-IBM1381
x-IBM1383
x-IBM29626C
x-IBM300
x-IBM33722
x-IBM833
x-IBM834
x-IBM856
x-IBM875
x-IBM921
x-IBM922
x-IBM930
x-IBM933
x-IBM935
x-IBM937
x-IBM939
x-IBM942
x-IBM942C
x-IBM943
x-IBM943C
x-IBM948
x-IBM949
x-IBM949C
x-IBM950
x-IBM964
x-IBM970
x-ISCII91
x-ISO-2022-CN-CNS
x-ISO-2022-CN-GB
x-JISAutoDetect
x-MacArabic
x-MacCentralEurope
x-MacCroatian
x-MacCyrillic
x-MacDingbat
x-MacGreek
x-MacHebrew
x-MacIceland
x-MacRoman
x-MacRomania
x-MacSymbol
x-MacThai
x-MacTurkish
x-MacUkraine
x-MS932_0213
x-MS950-HKSCS
x-MS950-HKSCS-XP
x-mswin-936
x-SJIS_0213
x-windows-50220
x-windows-50221
x-windows-874
x-windows-949
x-windows-950
x-windows-iso2022jp

================================================================

